# dotfiles

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .vimrc  .zprofile  .zshrc  AGENTS.md  README.md  dotfilesLink.sh  init.sh  pyproject.toml
.config/brewfile/: Brewfile
.config/git/: config  ignore
.config/karabiner/: karabiner.json
.ssh/: config
etc/homebrew/: Brewfile
etc/scripts/: convertall.sh  subl.sh
etc/tmux/: completion
etc/vscode/: keybindings.json  settings.json
prompts/shared/: code-check.md  create-or-update-pr.md  dev-all.md  dev-finish.md  dev-start.md  make-comments-in-japanese.md  report.md
scripts/: get_unapproved_pull_requests.py
scripts/gemini-review/: main.sh
scripts/gh-export-issues/: README.md  main.go
scripts/gh-issue-export/: README.md  main.go
scripts/gh-pr-active/: Makefile  README.md  go.mod  main.go
scripts/gh-pr-unapproved/: Makefile  README.md  go.mod  main.go  main.sh
scripts/gh_export_issues/: README.md  gh-export-issues  main.go  main.sh
scripts/git-update/: main.sh
scripts/make-peco/: README.md  main.sh
scripts/python/: get_unapproved_pull_requests.py
scripts/shell/: git_move_commits.sh  git_save_point.sh  git_update.sh  remove_localized.sh
scripts/split-png-grid/: README.md  go.mod  main.go
scripts/tmux-attach-peco/: README.md  main.sh
scripts/tmux-unique-session/: README.md  main.sh
scripts/tmux_attach_peco/: README.md  main.sh
utility/: pngquant-all.sh  rperm.sh  unitconvert.sh  update_files.sh
vscode/: keybindings.json  settings.json
(+12 files in other folders)
